// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Tab component with active class correctly 1`] = `
<li
  className="movie-nav__item movie-nav__item--active"
  onClick={[Function]}
>
  <a
    className="movie-nav__link"
    href="#"
  >
    Reviews
  </a>
</li>
`;

exports[`Should render Tab component without active class correctly 1`] = `
<li
  className="movie-nav__item "
  onClick={[Function]}
>
  <a
    className="movie-nav__link"
    href="#"
  >
    Reviews
  </a>
</li>
`;
